// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`properties/person > not readOnly, show firstname 1`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        <div
          class="react-select__single-value"
        >
          <div
            class="Person-item"
          >
            
            test user
            
          </div>
        </div>
        
        <input
          aria-controls="cl-1"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      <div
        class="react-select__clear-indicator"
        role="button"
        tabindex="-1"
      >
        <i
          class="CompassIcon icon-close"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`properties/person > not readOnly, show me 1`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        
        <div
          class="react-select__placeholder"
        >
          Empty
        </div>
        <input
          aria-activedescendant="cl-5-option-0"
          aria-controls="cl-5"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-5"
        role="listbox"
      >
        
        <div
          aria-selected="false"
          class="react-select__option react-select__option--is-focused"
          id="cl-5-option-0"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            Me
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-5-option-1"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-5-option-2"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-2
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-5-option-3"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-3
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person > not readOnly, show me 2`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        
        <div
          class="react-select__placeholder"
        >
          Empty
        </div>
        <input
          aria-activedescendant="cl-5-option-0"
          aria-controls="cl-5"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-5"
        role="listbox"
      >
        
        <div
          aria-selected="false"
          class="react-select__option react-select__option--is-focused"
          id="cl-5-option-0"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            Me
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-5-option-1"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-5-option-2"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-2
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-5-option-3"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-3
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person > not readOnly, show modal 1`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        
        <div
          class="react-select__placeholder"
        >
          Empty
        </div>
        <input
          aria-controls="cl-2"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`properties/person > not readOnly, show modal 2`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        
        <div
          class="react-select__placeholder"
        >
          Empty
        </div>
        <input
          aria-activedescendant="cl-2-option-0"
          aria-controls="cl-2"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-2"
        role="listbox"
      >
        
        <div
          aria-selected="false"
          class="react-select__option react-select__option--is-focused"
          id="cl-2-option-0"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-2-option-1"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-2
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-2-option-2"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-3
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person > not readOnly, show username 1`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        <div
          class="react-select__single-value"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
          </div>
        </div>
        
        <input
          aria-controls="cl-0"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      <div
        class="react-select__clear-indicator"
        role="button"
        tabindex="-1"
      >
        <i
          class="CompassIcon icon-close"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`properties/person > readOnly view 1`] = `
<div>
  <div
    class="Person octo-propertyvalue octo-propertyvalue--readonly"
  >
    <div
      class="Person-item"
    >
      
      username-1
      
    </div>
  </div>
</div>
`;

exports[`properties/person > show multiple 1`] = `
<div>
  <div
    class="Combobox MultiPerson octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container react-select__value-container--is-multi"
      >
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-1
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-2
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        
        
        <input
          aria-controls="cl-3"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      <div
        class="react-select__clear-indicator"
        role="button"
        tabindex="-1"
      >
        <i
          class="CompassIcon icon-close"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`properties/person > show multiple, display modal 1`] = `
<div>
  <div
    class="Combobox MultiPerson octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container react-select__value-container--is-multi"
      >
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-1
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-2
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        
        
        <input
          aria-controls="cl-4"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      <div
        class="react-select__clear-indicator"
        role="button"
        tabindex="-1"
      >
        <i
          class="CompassIcon icon-close"
        />
      </div>
    </div>
    
  </div>
</div>
`;

exports[`properties/person > show multiple, display modal 2`] = `
<div>
  <div
    class="Combobox MultiPerson octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container react-select__value-container--is-multi"
      >
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-1
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        <div
          class="react-select__multi-value"
        >
          <div
            class="react-select__multi-value__label"
          >
            <div
              class="MultiPerson-item"
            >
              
              username-2
              
            </div>
          </div>
          <div
            class="react-select__multi-value__remove"
            role="button"
            tabindex="-1"
          >
            <i
              class="CompassIcon icon-close"
            />
          </div>
        </div>
        
        
        <input
          aria-activedescendant="cl-4-option-0"
          aria-controls="cl-4"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      <div
        class="react-select__clear-indicator"
        role="button"
        tabindex="-1"
      >
        <i
          class="CompassIcon icon-close"
        />
      </div>
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-4"
        role="listbox"
      >
        
        <div
          aria-selected="true"
          class="react-select__option react-select__option--is-focused react-select__option--is-selected"
          id="cl-4-option-0"
          role="option"
        >
          <div
            class="MultiPerson-item"
          >
            
            username-1
            
          </div>
        </div>
        <div
          aria-selected="true"
          class="react-select__option react-select__option--is-selected"
          id="cl-4-option-1"
          role="option"
        >
          <div
            class="MultiPerson-item"
          >
            
            username-2
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-4-option-2"
          role="option"
        >
          <div
            class="MultiPerson-item"
          >
            
            username-3
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
